# babyjubjub-elgamal-project

./: .gitignore  .gitmodules  Cargo.toml  README.md  dump.rdb
decryption-client/: Cargo.toml
decryption-client/src/: main.rs
decryptor-node/: Cargo.toml  SimpleAccessControl.json
decryptor-node/src/: access.rs  lib.rs  main.rs
issuer-wasm-bindings/src/: lib.rs
main/: Cargo.toml
main/src/: encryption.rs  lib.rs  main.rs  polynomial.rs
mpc-core-wasm-bindings/: Cargo.toml
mpc-core-wasm-bindings/src/: lib.rs
networking/: Cargo.toml
networking/src/: server.rs
oprf-client/: Cargo.toml
oprf-client/src/: lib.rs
oprf-lambda/: Cargo.toml
oprf-lambda-deprecated/: Cargo.toml  build-for-lambda.sh
oprf-lambda/src/: main.rs
oprf-server/: Cargo.toml
oprf-server/src/: cors.rs  lambda.rs  main.rs  ratelimit.rs
sgx/: Cargo.toml
sgx/.cargo/: config  config.toml
sgx/src/: communication.rs  customtls.rs  main.rs  sealing.rs
wasm-bindings/: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  test.ts  webpack.config.js
wasm-bindings/bindings/: elgamal_babyjubjub.d.ts  elgamal_babyjubjub.js  elgamal_babyjubjub_bg.wasm  elgamal_babyjubjub_bg.wasm.d.ts
wasm-bindings/src/: lib.rs
wasm-bindings/src-js/: authsig.js  browser-target.js  index.js  lit-action.js  wrapper.js
wasm-bindings/test-js/: tests.js
