[package]
name = "decryptor-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { path = "../babyjubjub-rs-with-elgamal"}
babyjubjub-elgamal = { path = "../main"}
num-bigint = "0.4.3"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
# rocket_cors = "0.5.2"
# rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
