[package]
name = "mpc-core-wasm-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
babyjubjub-elgamal = { path = "../main"}
babyjubjub-rs = { path = "../babyjubjub-rs-with-elgamal"}
getrandom = { version = "0.2", features = ["js"] }
# chrono = { version = "0.4.23", features = ["wasmbind"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.64"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
num-bigint = "0.4.3"
ff_ce = "0.14.3"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "rlib"]