[package]
name = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
rustls-pemfile = "1.0.2"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
tokio-rustls = "0.23.4"
tokio-util = { version = "0.7.7", features = ["compat"] }
