[package]
name = "oprf-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
ff = {package="ff_ce", version= "0.11", features = ["derive"]}
babyjubjub-rs = { path = "../babyjubjub-rs-with-elgamal"}
serde-wasm-bindgen = "0.5.0"
blake2 = "0.10.6"
num-bigint = "0.4.3"
rand = "0.8.5"
console_error_panic_hook = "0.1.7"
serde = "1.0.160"

[lib]
crate-type = ["cdylib"]
