[package]
name = "oprf-lambda"
version = "0.1.0"
edition = "2021"
autobins = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
babyjubjub-rs = { path = "../babyjubjub-rs-with-elgamal"}
ff = { package="ff_ce", version= "0.11", features = ["derive"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^2"
num-bigint = "0.4.3"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"
