[package]
name = "oprf-lambda"
version = "0.1.0"
edition = "2021"
autobins = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"