[package]
name = "sgx-zkescrow"
edition = "2021"
version = "0.0.0"
authors = ["Nanak Nihal Khalsa <nanak@holonym.id>"]
description = "SGX version of zkEscrow 'network'"
license = "MIT/Apache-2.0"
# repository = "https://github.com/holonym-foundation"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { version = "0.0.10", path = "../babyjubjub-rs-with-elgamal", default-features = true }
# babyjubjub-elgamal = { path = "../main"}
sgx-isa = { version = "0.2", features = ["sgxstd"] }
rand = "0.6.4"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
# aes-gcm = "0.10.1"
# generic-array = "0.14.6"
# aes-gcm-siv = "0.11.1"
# rust-crypto = "0.2.36"
# libp2p = "0.51.1"
# hyper = { version = "1.0.0-rc.3", features = ["full"] }

[build]
target = "x86_64-fortanix-unknown-sgx"
[run]
target = "x86_64-fortanix-unknown-sgx"
