[package]
name = "sgx-zkescrow"
edition = "2021"
version = "0.0.0"
authors = ["Nanak Nihal Khalsa <nanak@holonym.id>"]
description = "SGX version of zkEscrow 'network'"
license = "MIT/Apache-2.0"
# repository = "https://github.com/holonym-foundation"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { version = "0.0.10", path = "../babyjubjub-rs-with-elgamal", default-features = true }
babyjubjub-elgamal = { path = "../main"}
sgx-isa = { version = "0.2", features = ["sgxstd"] }
rand = "0.6.4"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
# http = "0.2.9"
# reqwest = { version = "0.11.14", default-features = false }
# ethers = "1.0.2"
# ring = "0.16.20"
# aes-gcm = "0.10.1"
# generic-array = "0.14.6"
# aes-gcm-siv = "0.11.1"
# rust-crypto = "0.2.36"
libp2p = "0.51.1"
# hyper = { version = "1.0.0-rc.3", features = ["full"] }
chrono = "0.4.24"
mbedtls = { version = "0.8.1"}
# tokio = { version = "1", features = ["full"] }
minreq = { version = "2.7.0" }
clap = { version = "4.2.1", features = ["derive"] }
[build]
target = "x86_64-fortanix-unknown-sgx"
[run]
target = "x86_64-fortanix-unknown-sgx"
