[package]
name = "elgamal-babyjubjub"
version = "0.0.0"
authors = ["Nanak Nihal Khalsa <nanak@holonym.id>"]
description = "WASM bindings for ElGamal encryption over the BabyJubJub curve"
license = "MIT/Apache-2.0"
repository = "https://github.com/holonym-foundation"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# babjubjub-elgamal = { path = "../main"}
babyjubjub-rs = { path = "../babyjubjub-rs"}
getrandom = { version = "0.2", features = ["js"] }
# chrono = { version = "0.4.23", features = ["wasmbind"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.64"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
num-bigint = "0.4.3"
ff_ce = "0.14.3"
hex = "0.4.3"
